--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -45,7 +45,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginLeft="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_16sdp"
                 android:layout_marginRight="@dimen/_16sdp"
                 android:fontFamily="@font/gotham_medium"
@@ -63,41 +63,77 @@
             android:layout_below="@+id/rl_app_logo"
             android:gravity="center">
 
-        <ImageView
-                android:id="@+id/phone_btn"
-                android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/email_et"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@android:drawable/stat_sys_phone_call"
-                android:background="@drawable/round_icon_bg"
-                android:padding="@dimen/_15sdp"
+                android:background="@drawable/edt_bg_1"
+                android:padding="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:hint="@string/email"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/password_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edt_bg_1"
+                android:padding="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:hint="@string/password"
+                android:layout_below="@id/email_et"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sign_in_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:layout_below="@id/password_et"
+                android:text="@string/sign_in"
+                android:background="@drawable/round_corner_bg_two"
+                android:textColor="@color/color_white"/>
+
+        <View
+                android:id="@+id/separator_1"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="@dimen/_1sdp"
+                android:layout_below="@id/sign_in_btn"
                 android:layout_centerHorizontal="true"/>
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fb_login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:contentDescription="@string/facebook_login_button"
-                app:srcCompat="@drawable/facebook"
-                android:layout_below="@id/phone_btn"
-                android:layout_toLeftOf="@id/phone_btn"
-                android:layout_toStartOf="@id/phone_btn"/>
+                android:src="@drawable/facebook"
+                android:layout_below="@id/sign_in_btn"
+                android:layout_toStartOf="@id/separator_1"
+                android:layout_toLeftOf="@id/separator_1"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/insta_login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:contentDescription="@string/instagram_login_button"
-                app:srcCompat="@drawable/instagram"
-                android:layout_below="@id/phone_btn"
-                android:layout_toRightOf="@id/phone_btn"
-                android:layout_toEndOf="@id/phone_btn"/>
-
+                android:src="@drawable/instagram"
+                android:layout_below="@id/sign_in_btn"
+                android:layout_toEndOf="@id/separator_1"
+                android:layout_toRightOf="@id/separator_1"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginLeft="@dimen/_5sdp" />
 
     </RelativeLayout>
 
