changes done 29-Dec-2020

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -65,7 +65,8 @@
                     android:layout_marginLeft="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_20sdp"
-                    android:hint="@string/email"/>
+                    android:hint="@string/email"
+                    onTextChange="@{() -> viewmodel.form.loginFields.setEmail(emailEt.getText().toString())}"/>
 
             <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/password_et"
@@ -80,7 +81,8 @@
                     android:layout_marginRight="@dimen/_20sdp"
                     android:hint="@string/password"
                     android:layout_below="@id/email_et"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    onTextChange="@{() -> viewmodel.form.loginFields.setPassword(passwordEt.getText().toString())}"/>
 
             <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/sign_in_btn"
@@ -96,7 +98,7 @@
                     android:text="@string/sign_in"
                     android:background="@drawable/round_corner_bg_two"
                     android:textColor="@color/color_white"
-                    android:onClick="@{()->viewmodel.onSignInClick(emailEt.getText(), passwordEt.getText())}"/>
+                    android:onClick="@{()->viewmodel.form.onSignInClick()}"/>
 
             <View
                     android:id="@+id/separator_1"
