--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -66,6 +66,8 @@
                     android:layout_marginEnd="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_20sdp"
                     android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
                     onTextChange="@{() -> viewmodel.form.loginFields.setEmail(emailEt.getText().toString())}"/>
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -82,6 +84,7 @@
                     android:hint="@string/password"
                     android:layout_below="@id/email_et"
                     android:inputType="textPassword"
+                    android:maxLines="1"
                     onTextChange="@{() -> viewmodel.form.loginFields.setPassword(passwordEt.getText().toString())}"/>
 
             <androidx.appcompat.widget.AppCompatButton
