--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ActionItem">
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:drawablePadding">@dimen/_20sdp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/_12sdp</item>
+    </style>
+
 </resources>
